feat: Implement room deletion
